--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,10 +15,14 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-localization": "^10.1.0",
     "expo-status-bar": "~1.0.4",
+    "i18next": "^20.2.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.8.15",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-appearance": "^0.3.4",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-screens": "^3.2.0",
