--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,5 +6,18 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.4",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "typescript": "^4.2.4"
   }
 }
