--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,6 +16,9 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-image-manipulator": "^9.1.0",
+    "expo-image-picker": "^10.1.4",
+    "expo-image-picker-multiple": "^1.4.1",
     "expo-localization": "^10.1.0",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.8",
