--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
     "expo-image-picker-multiple": "^1.4.1",
     "expo-localization": "^10.1.0",
     "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "^9.1.0",
     "formik": "^2.2.8",
     "i18next": "^20.2.4",
     "moment": "^2.29.1",
