--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-native-snap-carousel": "^3.8.3",
     "expo": "~41.0.1",
     "expo-image-manipulator": "^9.1.0",
     "expo-image-picker": "^10.1.4",
@@ -37,6 +38,7 @@
     "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.0.0",
     "react-native-screens": "^3.2.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4"
