--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-pager-view": "^5.1.9",
     "react-native-reanimated": "^2.0.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-screens": "^3.2.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
