--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
     "postinstall": "expo-yarn-workspaces postinstall"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^3",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-top-tabs": "^5.3.15",
@@ -35,10 +36,9 @@
     "react-native-confirmation-code-field": "6",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-pager-view": "^5.1.9",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-root-toast": "^3.2.1",
-    "react-native-screens": "^3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
