--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,8 +18,11 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/crypto-js": "^4.0.2",
     "@types/react-native-snap-carousel": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "expo": "~41.0.1",
+    "expo-blur": "^9.0.3",
     "expo-image-manipulator": "^9.1.0",
     "expo-image-picker": "^10.1.4",
     "expo-image-picker-multiple": "^1.4.1",
