--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker-multiple": "^1.4.1",
     "expo-linear-gradient": "~9.1.0",
     "expo-localization": "^10.1.0",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "^9.1.0",
     "formik": "^2.2.8",
