--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^11.8.15",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-appearance": "^0.3.4",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-confirmation-code-field": "6",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -47,6 +48,7 @@
     "react-native-root-toast": "^3.2.1",
     "react-native-screens": "~3.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4"
