--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
     "@types/react-native-snap-carousel": "^3.8.3",
     "crypto-js": "^4.1.1",
     "expo": "~41.0.1",
+    "expo-apple-authentication": "~3.1.0",
     "expo-blur": "^9.0.3",
     "expo-image-manipulator": "^9.1.0",
     "expo-image-picker": "^10.1.4",
