--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,6 +45,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "~2.1.0",
     "react-native-root-toast": "^3.2.1",
     "react-native-screens": "~3.0.0",
